Added users.csv file in classpth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 spring.batch.job.enabled=false
 
-input=file:/Users/e055236/CodeBase/Extra/spring-batch/src/main/resource/users.csv
+input=classpath:users.csv
 
 # Spring autodetect the different SQL Dialects of each datasource
 spring.jpa.database=default
