--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ input=classpath:users.csv
 
 # Spring autodetect the different SQL Dialects of each datasource
 spring.jpa.database=default
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Oracle settings
 spring.datasource.jdbc-url=jdbc:oracle:thin:@ech-10-157-151-74.mastercard.int:1527:DEVCLOUD
